--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div>
         <h1 id="t"><span>Н</span><span>Е</span>
 
-            <span>П</span><span>Л</span><span>А</span><span>Ь</span>
+            <span>П</span><span>Л</span><span>А</span><span>Ч</span><span>Ь</span>
         </h1>
         <h2 class="lp"><a href="https://t.me/lp_deadpool
             " target="_blank" rel="noopener noreferrer"> @lp_deadpool</a></h2>
